[package]
edition = "2018"
name = "btf"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "serde"]
std = ["byteorder/std", "serde/std"]

[dependencies]
bitflags = "1.3"
byteorder = {version="1", default-features=false}
cfg-if = "0.1"
derive_more = "0.99"
log = "0.4"
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true}
thiserror = "1.0"
untrusted = "0.9"

[dev-dependencies]
anyhow = "1.0"
either = "1.6"
memmap = "0.7"
pretty_env_logger = "0.4"
serde_json = "1.0"
serde_yaml = "0.8"
structopt = "0.3"

[[example]]
name = "dump"
required-features = ["std", "serde"]
