[package]
edition = "2021"
name = "btf"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
description = "A Rust implementation of the common eBPF ELF operations."
readme = "README.md"
repository = "https://github.com/flier/rust-btf"
keywords = ["btf", "eBPF"]
categories = ["development-tools::debugging", "development-tools::ffi"]

[features]
default = ["std", "serde"]
std = ["byteorder/std", "serde/std"]

[dependencies]
bitflags = "1.3"
byteorder = {version="1", default-features=false}
cfg-if = "0.1"
derive_more = "0.99"
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true}
thiserror = "1.0"
untrusted = "0.9"

[dev-dependencies]
anyhow = "1.0"
either = "1.6"
log = "0.4"
memmap = "0.7"
pretty_env_logger = "0.4"
serde_json = "1.0"
serde_yaml = "0.8"
structopt = "0.3"

[[example]]
name = "dump"
required-features = ["std", "serde"]
