[package]
authors = ["Flier Lu <flier.lu@gmail.com>"]
categories = ["development-tools::debugging", "development-tools::ffi"]
description = "A Rust implementation of the common eBPF ELF operations."
edition = "2021"
keywords = ["btf", "eBPF"]
license = "MIT OR Apache-2.0"
name = "btf"
readme = "README.md"
repository = "https://github.com/flier/rust-btf"
version = "0.1.0"

[features]
default = ["full"]

full = ["mini", "serde", "rust", "half"]
mini = ["std"]
rust = ["check_keyword", "quote", "proc-macro2"]
std = ["serde/std", "either/use_std"]

[dependencies]
bitflags = "1.3"
byteorder = {version = "1", default-features = false}
cfg-if = "0.1"
check_keyword = {version = "0.2", optional = true}
derive-new = {version = "0.5", default-features = false}
derive_more = "0.99"
either = {version = "1.6", default-features = false}
half = {version = "2.0", default-features = false, optional = true}
proc-macro2 = {version = "1.0", optional = true}
quote = {version = "1.0", optional = true}
serde = {version = "1.0", default-features = false, features = ["derive"], optional = true}
thiserror = "1.0"
untrusted = "0.9"

[dev-dependencies]
anyhow = "1.0"
log = "0.4"
memmap = "0.7"
pretty_env_logger = "0.4"
serde_json = "1.0"
serde_yaml = "0.8"
structopt = "0.3"

[[example]]
name = "dump"
required-features = ["std", "serde", "rust"]
